--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "init": "^0.1.2",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
+  },
+  "keywords": [],
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
