--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/annafricks/movie_api.git"
@@ -23,6 +22,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "init": "^0.1.2",
+    "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
