--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   },
   "homepage": "https://github.com/annafricks/movie_api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "init": "^0.1.2",
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^9.0.1"
   },
   "keywords": [],
