--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "init": "^0.1.2",
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
