--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "uuid": "^9.0.1"
   },
   "keywords": [],
